# stacksentry

./: .gitignore  README.md  audit-results.json  pyproject.toml  pytest.ini.toml  requirements-dev.txt  requirements.txt  result.json  sec_audit.py  test.json
checks/: container_checks.py  host_checks.py  webserver_checks.py
remediation/: __init__.py  auto_fix.py  generator.py  llm.py  templates.py
reporting/: pdf_generator.py
scanners/: docker_scanner.py  http_scanner.py  ssh_scanner.py
sec_audit/: cli.py  narratives.py  planner.py  results.py  telemetry.py
storage/: __init__.py  drift.py  history.py
tests/: conftest.py  test_branch_logic.py  test_drift.py  test_guards.py  test_remediation.py  test_scan_result.py
